--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@ https://templatemo.com/tm-586-scholar
                                         <p>Fondée en 859 à Fès, Al Quaraouiyine est reconnue comme la plus ancienne institution d'enseignement supérieur au monde encore en activité.</p>
                                         <div class="buttons">
                                             <div class="icon-button">
-                                                <a href="#"><i class="fa fa-play"></i> En savoir plus sur Al Quaraouiyine</a>
+                                                <a href="https://youtu.be/DZUBpOb1_Zw?feature=shared"><i class="fa fa-play"></i> En savoir plus sur Al Quaraouiyine</a>
                                             </div>
                                         </div>
                                     </div>
@@ -105,7 +105,7 @@ https://templatemo.com/tm-586-scholar
                                     <p>Le Maroc dispose d'institutions publiques et privées offrant un large éventail d'options d'éducation, des écoles primaires aux universités prestigieuses.</p>
                                     <div class="buttons">
                                         <div class="icon-button">
-                                            <a href="#"><i class="fa fa-play"></i> En savoir plus sur l'éducation publique et privée</a>
+                                            <a href="https://youtu.be/kWW7vXLGCqk?feature=shared"><i class="fa fa-play"></i> En savoir plus sur l'éducation publique et privée</a>
                                         </div>
                                     </div>
                                 </div>
@@ -121,7 +121,7 @@ https://templatemo.com/tm-586-scholar
                                         <p>Avec la digitalisation, les étudiants marocains peuvent accéder à des cours en ligne et à des ressources éducatives pour un apprentissage flexible.</p>
                                         <div class="buttons">
                                             <div class="icon-button">
-                                                <a href="#"><i class="fa fa-play"></i> En savoir plus sur l'e-learning</a>
+                                                <a href="https://www.youtube.com/live/ZVQyp-e3E28?feature=shared"><i class="fa fa-play"></i> En savoir plus sur l'e-learning</a>
                                             </div>
                                         </div>
                                     </div>
@@ -132,7 +132,7 @@ https://templatemo.com/tm-586-scholar
                     
                     <!-- Navigation Arrows and Dots -->
                     <div class="owl-nav">
-                        <button type="button" role="presentation" class="owl-prev"><i class="fa fa-angle-left" aria-hidden="true"></i></button>
+                        
                         <button type="button" role="presentation" class="owl-next"><i class="fa fa-angle-right" aria-hidden="true"></i></button>
                     </div>
                     <div class="owl-dots">
