--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@ https://templatemo.com/tm-586-scholar
                     <h2>Comprendre les niveaux d'études au Maroc</h2>
                     <p>Le système éducatif marocain est structuré pour accompagner les élèves et étudiants à chaque étape de leur apprentissage, en leur offrant des choix diversifiés et en s'adaptant aux besoins du marché.</p>
                     <div class="main-button">
-                        <a href="#">En savoir plus</a>
+                        <a href="https://www.9rayti.com/dossier/systeme-lmd-maroc#:~:text=Structure%20du%20syst%C3%A8me%20LMD,3%20premi%C3%A8res%20ann%C3%A9es%20d'%C3%A9tudes.">En savoir plus</a>
                     </div>
                 </div>
             </div>
